----------------------------------
[2009-11-30 Ver 0.50 -> 0.51]
- Modified block render process.
- Added constant for download 'ke-tai_list.csv'.(special thanks ke-tai.org!)
- Added css filter flag in admin.php?act=GeneralSetting.
- Added Gticket check into simple login action for security.
- 'Wizin' updated from '0.53' to '0.60'.
----------------------------------
[2009-10-03 Ver 0.44 -> 0.50]
- Fixed bug about block show-function exist check.
- Added function for disable cache with cell phone access.(thx aki1222 and GIJOE)
- Added external link confirm action.
- Added config item 'trust_ip' and 'session_lifetime'.
- Modified session check logic.
- Modiifed preload (divide function).
- 'Wizin' updated from '0.52' to '0.53'.
- 'WizXc' module updated from '0.30' to '0.31'.
----------------------------------
[2009-09-14 Ver 0.43 -> 0.44]
- Fixed bug about duplicate constant in english language file.
- Fixed bug about get block object with deleted block id.
- Fixed bug about get selected block data.
- 'Wizin' updated from '0.49' to '0.52'.
----------------------------------
[2009-08-11 Ver 0.42 -> 0.43]
- Fixed bug about visible default value on BlockSetting.
- Fixed bug about get block process twice when block has no contents.(thx masahiro)
- Fixed bug about infinite redirect when session timeout.
- Added xoopsform_dhtmltextarea template for mobile.
- Added css filter call.
- Modified (refactoring) filter logic.
- Modified theme override logic.
- Assign 'user' module config for template.
- Modified 'user' module config check in Login action.
- 'Wizin' updated from '0.47' to '0.49'.
- 'WizXc' module updated from '0.29' to '0.30'.
----------------------------------
[2009-05-19 Ver 0.41 -> 0.42]
- Fixed bug about non-object function called error when accessed site top.(thx mock)
- 'Wizin' updated from '0.46' to '0.47'.
----------------------------------
[2009-05-19 Ver 0.40 -> 0.41]
- Fixed bug about visible mobile theme when not mobile client access.(thx mbxoops)