@@ -1,9 +1,10 @@
 ----------------------------------
-[2009-11-30 Ver 0.50 -> 0.51]
+[2009-12-01 Ver 0.50 -> 0.51]
 - Modified block render process.
 - Added constant for download 'ke-tai_list.csv'.(special thanks ke-tai.org!)
 - Added css filter flag in admin.php?act=GeneralSetting.
 - Added Gticket check into simple login action for security.
+- Added host check for DNS Rebinding.
 - 'Wizin' updated from '0.53' to '0.60'.
 ----------------------------------
 [2009-10-03 Ver 0.44 -> 0.50]
